# semafaro-inteligente-bitdoglab

./: CMakeLists.txt  README.MD  semafaro-inteligente-raspberry-pico-w.c
lib/: leds.c  leds.h  ssd1306.c
